<resources>
    <string name="app_name">BootCampProject1</string>
    <string name="username">username</string>
    <string name="password">Password</string>
    <string name="hint_email">Email</string>
    <string name="btn_forget_passwd">Forget Password?</string>
    <string name="btn_signup">Not a Member? Sign up!</string>
    <string name="Username">Username</string>
    <string name="phone">Phone No</string>
    <string name="have_account">Already have an account? Log In!</string>
    <string name="confirm">Confirm Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="url">Type a URL</string>
</resources>
