<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootView"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    >

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="10dp"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_padding">


                <ImageView
                    android:id="@+id/login_image"
                    android:layout_width="@dimen/logo_w_h"
                    android:layout_height="@dimen/logo_w_h"
                    android:layout_margin="14dp"
                    android:src="@drawable/login"
                    android:transitionName="logo_image"/>

                <TextView
                    android:id="@+id/login_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="LOGIN"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#011A25"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="14dp"
                    android:fontFamily="serif"
                    android:transitionName="logo_text"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="22dp"
                    android:layout_marginBottom="22dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:transitionName="email_trans">


                    <EditText
                        android:id="@+id/login_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:padding="14dp"
                        android:textColor="@color/text_color"/>

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:passwordToggleEnabled="true"
                    android:hint="@string/password"
                    android:layout_marginTop="5dp"
                    android:transitionName="password_trans">


                    <EditText
                        android:id="@+id/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:padding="14dp"
                        android:textColor="@color/text_color"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>




                <TextView
                    android:id="@+id/btn_reset_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_marginEnd="6dp"
                    android:background="@null"
                    android:padding="2dp"
                    android:gravity="end"
                    android:text="@string/btn_forget_passwd"
                    android:textAllCaps="false"
                    android:textColor="#011A25"
                    android:textStyle="bold"
                    android:fontFamily="serif"/>


                <Button
                    android:id="@+id/login_button"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/btn_rounded"
                    android:text="LOGIN"
                    android:layout_margin="25dp"
                    android:textColor="#ffffff"
                    android:fontFamily="serif"
                    android:transitionName="button_tran"/>


                <TextView
                    android:id="@+id/btn_register"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginEnd="6dp"
                    android:layout_marginRight="6dp"
                    android:background="@null"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/btn_signup"
                    android:textAllCaps="false"
                    android:textColor="#011A25"
                    android:textStyle="bold"
                    android:fontFamily="serif"
                    android:transitionName="login_trans"/>


            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </FrameLayout>

</RelativeLayout>